--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "typescript": "^3.5.3"
   },
@@ -38,6 +39,7 @@
     "concurrently": "^4.1.1",
     "electron": "^6.0.0",
     "electron-builder": "^21.2.0",
+    "electron-devtools-installer": "^2.2.4",
     "wait-on": "^3.3.0"
   }
 }
