--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/lowdb": "^1.0.9",
     "@types/mongoose": "^5.5.11",
     "bcrypt": "^3.0.6",
     "bootstrap": "^4.3.1",
     "electron-is-dev": "^1.1.0",
     "jquery": "^3.4.1",
-    "mongoose": "^5.6.8",
+    "lowdb": "^1.0.0",
     "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
