--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "electron-is-dev": "^1.1.0",
     "jquery": "^3.4.1",
     "mongoose": "^5.6.8",
+    "nedb": "^1.8.0",
     "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
